# spring

./: README.markdown
rts/Rendering/Models/: IModelParser.cpp
rts/lib/: CMakeLists.txt
rts/lib/assimp/: CMakeLists.txt  revision.h
rts/lib/assimp/code/: 3DSConverter.cpp  3DSHelper.h  3DSLoader.cpp  ACLoader.cpp  ASEParser.cpp  ASEParser.h  AssbinExporter.cpp  AssbinLoader.cpp  AssxmlExporter.cpp  BVHLoader.cpp  BlenderDNA.cpp  BlenderDNA.h  BlenderDNA.inl  BlenderScene.cpp  BlenderScene.h  BlenderTessellator.cpp  BlenderTessellator.h  ByteSwap.h  CMakeLists.txt  CSMLoader.cpp  CalcTangentsProcess.cpp  ColladaExporter.cpp  ColladaLoader.cpp  ColladaParser.cpp  DeboneProcess.cpp  FBXBinaryTokenizer.cpp  FBXConverter.cpp  FBXDocument.cpp  FBXDocument.h  FBXParser.cpp  FBXProperties.cpp  FBXProperties.h  FBXTokenizer.cpp  FileSystemFilter.h  FindDegenerates.cpp  FixNormalsStep.cpp  GenVertexNormalsProcess.cpp  IFCBoolean.cpp  IFCCurve.cpp  IFCGeometry.cpp  (+48 more)
rts/lib/assimp/code/BoostWorkaround/boost/: timer.hpp
rts/lib/assimp/contrib/clipper/: clipper.cpp  clipper.hpp
rts/lib/assimp/contrib/poly2tri/poly2tri/common/: shapes.cc  shapes.h  utils.h
rts/lib/assimp/contrib/poly2tri/poly2tri/sweep/: advancing_front.cc  sweep.cc  sweep_context.cc  sweep_context.h
rts/lib/assimp/include/assimp/: anim.h  color4.inl  matrix3x3.inl  matrix4x4.inl  quaternion.inl  types.h  vector2.h  vector2.inl  vector3.h  vector3.inl
